
$_workitem_local_id
  The local ID coordinates of the workitem processed by the current context,
  within its thread's workgroup.  Unsigned int vector of size 3, when
  available.  Otherwise, void.

$_workitem_global_id
  The global ID coordinates of the workitem processed by the current context.
  Unsigned int vector of size 3, when available.  Otherwise, void.

* New commands

set scheduler-locking eval | replay eval | replay run | replay step | run | step (on|off)
show scheduler-locking (eval | replay eval | replay run | replay step | run | step)
  Extend the scheduler-locking settings with a set of set/show
  commands, which can be used individually to control the scheduler during
  various commands.
    'eval' -- when on, the scheduler is locked during expression evaluation
    in normal mode.
    'replay eval' -- when on, the scheduler is locked during expression
    evaluation in replay mode.
    'replay run' -- when on, the scheduler is locked during continuing
    commands in replay mode.
    'replay step' -- when on, the scheduler is locked during stepping
    commands in replay mode.
    'run' -- when on, the scheduler is locked during continuing commands
    in normal mode.
    'step' -- when on, the scheduler is locked during stepping commands
    in normal mode.
  The older scheduler locking settings can be used as shortcuts, their behavior
  is not changed.
  The output of "show scheduler-locking" has changed to support the new settings.

maint jit dump
  Dump an in-memory JIT object into a file.

info devices
  Show additional information about inferiors which are considered
  devices by GDB.  For devices, the description displayed by 'info
  inferiors' has been changed.  The new description displays them as a
  'device' together with their PCI slot and sub-device ID.  This allows
  one to uniquely identify devices in 'info inferiors' with devices
  displayed in 'info devices'.

* Changed commands

info threads [-gid] [-stopped] [ID]...