@@ -2931,3 +2931,26 @@ processed by thread TP.
     predicate=True,
     invalid=True,
 )
+
+Method(
+    comment="""
+Return array containing the size of TP's thread group.
+""",
+    type="std::array<uint32_t, 3>",
+    name="workitem_local_size",
+    params=[("thread_info *", "tp")],
+    predicate=True,
+    invalid=True,
+)
+
+Method(
+    comment="""
+Return array containing the total number of workitems in the
+context of TP.
+""",
+    type="std::array<uint32_t, 3>",
+    name="workitem_global_size",
+    params=[("thread_info *", "tp")],
+    predicate=True,
+    invalid=True,
+)
